--- a/css/dom-ejercicios.css
+++ b/css/dom-ejercicios.css
@@ -83,19 +83,19 @@ video {
   background-color: var(--second-modal-color);
   opacity: 0;
   visibility: hidden;
-  transition: transform 0.3s ease, opacity 0.5s ease;
-  /* De arriba */
+  transition: transform 0.3s ease, opacity 0.5s ease; /*para que se vea esa animacion de abajo(que el menu salga de arriba, abajo, atc).m Le digo que le aplique la propiedad transition a la propiedad transform que dure 3segundos y que lo haga con un efecto de ease(de aceleracion)*/
+  /* El menu sale de arriba */
   transform: translate(0, -100%);
-  /* De abajo */
+  /* El menu sale de abajo */
   transform: translate(0, 100%);
-  /* De la derecha */
-  transform: translate(100%, 0);
-  /* De la izquierda */
-  transform: translate(-100%, 0);
+  /* El menu sale de la derecha */
+  transform: translate(100%, 0); 
+  /* El menu sale de la izquierda */
+  transform: translate(-100%, 0); 
 }
 
-.panel.is-active {
-  transform: translate(0, 0);
+.panel.is-active {  /*cuando el panel tenga la clase panel y la calse is-active*/
+  transform: translate(0, 0);  /*la transformacion regrese a una transformacion original*/
   opacity: 1;
   visibility: visible;
 }
